--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':draft')
+//    implementation project(':draft')
+
+    implementation 'com.github.blueskky:Draft:v1.0.0'
 }
+
