--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.whty.eschoolbag.draft">
+    package="com.whty.eschoolbag.draft.demo">
+
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -10,7 +13,7 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name="com.whty.eschoolbag.draft.TestActivity">
+        <activity android:name=".TestActivity">
 
 
             <intent-filter>
